--- a/styles/main.css
+++ b/styles/main.css
@@ -350,6 +350,7 @@ ul {
   color: black;
   font-weight: bold;
   white-space: nowrap;
+  padding-bottom: 2px;
 }
 .email_txt:after {
   content: attr(data-content);
@@ -358,7 +359,7 @@ ul {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 10%;
+  height: 30%;
   background-color: #50ba4c;
   opacity: 0.8;
 }
