--- a/styles/main.css
+++ b/styles/main.css
@@ -489,6 +489,7 @@ ul {
   .article-title-green {
     line-height: 1.18 !important;
     max-height: 13.1rem;
+    
   }
   .card_large div .article-body .article-title,
   .card_large div .article-body .article-title-green {
@@ -533,6 +534,7 @@ ul {
     -webkit-line-clamp: 5;
     max-height: fit-content;
     line-height: 1.18 !important;
+    padding-bottom: 0.1rem !important;
   }
 
   .txt {
