--- a/styles/main.css
+++ b/styles/main.css
@@ -655,7 +655,7 @@ ul {
   .article-title,
   .article-title-green {
     font-weight: 900 !important;
-    max-height: 6.25rem !important;
+    max-height: fit-content !important;
     line-height: 1.23 !important;
     padding-bottom: 0.17rem;
   }
