--- a/styles/main.css
+++ b/styles/main.css
@@ -46,12 +46,13 @@ a {
 
 .cardList_ctnr {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 16.75rem);
+
+  grid-template-columns: repeat(auto-fit, 17.75rem);
   padding-top: 0.625rem;
   gap: 0.625rem;
   grid-auto-rows: 16.75rem;
   grid-auto-flow: dense;
-  justify-content: center;
+  justify-content: space-around;
   overflow-x: visible;
 }
 .hasMore {
