--- a/styles/main.css
+++ b/styles/main.css
@@ -46,12 +46,12 @@ a {
 
 .cardList_ctnr {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 17.75rem);
+  grid-template-columns: repeat(auto-fit, 15.75rem);
   padding-top: 0.625rem;
-  row-gap: 0.625rem;
+  gap: 0.625rem;
   grid-auto-rows: 16.75rem;
   grid-auto-flow: dense;
-  justify-content: space-around;
+  justify-content: center;
   overflow-x: visible;
 }
 .hasMore {
@@ -221,10 +221,6 @@ ul {
 }
 .hv-toggle:hover div .load_animation_item {
   background-color: #000000;
-}
-
-.artBody {
-  height: 100%;
 }
 
 @keyframes preloader {
@@ -477,63 +473,11 @@ ul {
   }
 }
 
-@media screen and (max-width: 1577px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 16.8rem);
-    column-gap: 0.325rem;
-    row-gap: 0.625rem;
-    grid-auto-rows: 15.125rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 1415px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 15.8rem);
-    column-gap: 0.325rem;
-    row-gap: 0.625rem;
-    grid-auto-rows: 15.125rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 1330px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 14.8rem);
-    column-gap: 0.325rem;
-    row-gap: 0.625rem;
-    grid-auto-rows: 15.125rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 1210px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 13.8rem);
-    column-gap: 0.325rem;
-    row-gap: 0.625rem;
-    grid-auto-rows: 15.125rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 1060px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 12.5rem);
-    column-gap: 0.235rem;
-    row-gap: 0.625rem;
-    grid-auto-rows: 15.125rem;
-    justify-content: space-around;
-  }
-}
-
 @media screen and (max-width: 1024px) {
   .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 315px);
-    column-gap: 3px;
-    row-gap: 0.625rem;
+    grid-template-columns: repeat(auto-fit, 15.125rem);
+    gap: 0.625rem;
     grid-auto-rows: 15.125rem;
-    justify-content: space-evenly;
   }
   .article-desc {
     font-size: 10px;
@@ -574,54 +518,11 @@ ul {
     }
   }
 }
-
-@media screen and (max-width: 920px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 12.5rem);
-    column-gap: 0.235rem;
-    row-gap: 0.625rem;
-    grid-auto-rows: 10.8215rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 868px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 12.1rem);
-    column-gap: 0.255rem;
-    row-gap: 0.625rem;
-    grid-auto-rows: 10.8215rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 840px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 245px);
-    column-gap: 5px;
-    row-gap: 0.625rem;
-    grid-auto-rows: 10.8215rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (max-width: 792px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 225px);
-    column-gap: 5px;
-    row-gap: 0.625rem;
-    grid-auto-rows: 10.8215rem;
-    justify-content: space-around;
-  }
-}
-
 @media screen and (max-width: 768px) {
   .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 235px);
-    column-gap: 5px;
-    row-gap: 0.28rem;
+    grid-template-columns: repeat(auto-fit, 10.8215rem);
+    gap: 0.25rem;
     grid-auto-rows: 10.8215rem;
-    justify-content: space-around;
   }
 
   .article-title,
@@ -660,26 +561,6 @@ ul {
     .card_large .img-ctnr {
       height: calc(2 * 10.8215rem);
     }
-  }
-}
-
-@media screen and (max-width: 720px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 225px);
-    column-gap: 5px;
-    row-gap: 0.625rem;
-    grid-auto-rows: 10.8215rem;
-    justify-content: space-around;
-  }
-}
-
-@media screen and (min-width: 540px) and (max-width: 728px) {
-  .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 260px);
-    column-gap: 5px;
-    row-gap: 0.625rem;
-    grid-auto-rows: 10.8215rem;
-    justify-content: space-evenly;
   }
 }
 
