--- a/styles/main.css
+++ b/styles/main.css
@@ -46,10 +46,10 @@ a {
 
 .cardList_ctnr {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 15.75rem);
+  grid-template-columns: repeat(auto-fit, 16.75rem);
   padding-top: 0.625rem;
   gap: 0.625rem;
-  grid-auto-rows: 15.125rem;
+  grid-auto-rows: 16.75rem;
   grid-auto-flow: dense;
   justify-content: center;
   overflow-x: visible;
@@ -75,9 +75,14 @@ a {
   /* gap: 0.5rem; */
 }
 .article-body {
-  gap: 0.3rem;
+  gap: .3rem;
   font-family: "Poppins", Arial, Helvetica, sans-serif, "Segoe UI", Tahoma !important;
   cursor: pointer;
+  
+}
+
+.aCard__body{
+  height: calc(50% + .625rem);
 }
 
 .article-desc {
@@ -222,6 +227,8 @@ ul {
 .hv-toggle:hover div .load_animation_item {
   background-color: #000000;
 }
+
+
 
 @keyframes preloader {
   0%,
@@ -427,9 +434,7 @@ ul {
   background-color: var(--primary);
 }
 
-.card_large div .article-body .article-title,
-.card_large div .article-body .article-title-green {
-}
+
 
 @-moz-document url-prefix() {
   .article-preview::first-letter {
@@ -473,11 +478,16 @@ ul {
   }
 }
 
+
+
+
+
 @media screen and (max-width: 1024px) {
   .cardList_ctnr {
     grid-template-columns: repeat(auto-fit, 15.125rem);
     gap: 0.625rem;
     grid-auto-rows: 15.125rem;
+    
   }
   .article-desc {
     font-size: 10px;
@@ -518,11 +528,19 @@ ul {
     }
   }
 }
+
+
+
+
 @media screen and (max-width: 768px) {
   .cardList_ctnr {
-    grid-template-columns: repeat(auto-fit, 10.8215rem);
-    gap: 0.25rem;
-    grid-auto-rows: 10.8215rem;
+    grid-template-columns: repeat(auto-fit, 13.8215rem);
+    gap: 0.625rem;
+    grid-auto-rows: 13.8215rem;
+    
+  }
+  .aCard__body{
+    height: calc(50% + 0.625rem) !important;
   }
 
   .article-title,
@@ -538,10 +556,7 @@ ul {
     font-weight: 600;
   }
 
-  .card_large div.article-body .article-title,
-  .card_large div.article-body .article-title-green {
-    max-height: fit-content;
-  }
+
   .underline__span {
     background-size: 0% 0.3rem !important;
   }
@@ -556,13 +571,17 @@ ul {
   }
   @supports not (aspect-ratio: 1/1) {
     .card_medium .img-ctnr {
-      height: 10.8215rem;
+      height: 13.8215rem;
     }
     .card_large .img-ctnr {
-      height: calc(2 * 10.8215rem);
+      height: calc(2 * 13.8215rem);
     }
   }
 }
+
+
+
+
 
 @media screen and (max-width: 480px) {
   .article-desc-home {
@@ -652,6 +671,9 @@ ul {
     gap: 0.45rem;
     grid-auto-rows: 10.1215rem;
   }
+  .aCard__body{
+    height: calc(50% + 0.45rem) !important;
+  }
   .article-title,
   .article-title-green {
     font-weight: 900 !important;
@@ -688,6 +710,11 @@ ul {
     grid-template-columns: repeat(auto-fit, 8.1215rem);
     gap: 0.45rem;
     grid-auto-rows: 8.1215rem;
+  }
+  .aCard__body{
+    
+    height: calc(50% + 0.45rem);
+   
   }
   .author_img-ctnr {
     width: 20px;
