--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ nav ::-webkit-scrollbar {
   display: none;
 }
 .article-preview h2,
-.article-preview h2 strong{
+.article-preview h2 strong {
   color: var(--primary) !important;
 }
 h5 {
@@ -78,14 +78,13 @@ a {
   /* gap: 0.5rem; */
 }
 .article-body {
-  gap: .2rem;
+  gap: 0.2rem;
   font-family: "Poppins", Arial, Helvetica, sans-serif, "Segoe UI", Tahoma !important;
   cursor: pointer;
-  
 }
 
-.aCard__body{
-  height: calc(50% + .625rem);
+.aCard__body {
+  height: calc(50% + 0.625rem);
 }
 
 .article-desc {
@@ -230,8 +229,6 @@ ul {
 .hv-toggle:hover div .load_animation_item {
   background-color: #000000;
 }
-
-
 
 @keyframes preloader {
   0%,
@@ -438,8 +435,6 @@ ul {
   background-color: var(--primary);
 }
 
-
-
 @-moz-document url-prefix() {
   .article-preview::first-letter {
     -moz-color: var(--primary);
@@ -482,16 +477,18 @@ ul {
   }
 }
 
-
-
-
-
 @media screen and (max-width: 1024px) {
+  .authTxt {
+    width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   .cardList_ctnr {
     grid-template-columns: repeat(auto-fit, 15.125rem);
     gap: 0.625rem;
     grid-auto-rows: 15.125rem;
-    
   }
   .article-desc {
     font-size: 10px;
@@ -533,17 +530,13 @@ ul {
   }
 }
 
-
-
-
 @media screen and (max-width: 768px) {
   .cardList_ctnr {
     grid-template-columns: repeat(auto-fit, 13.8215rem);
     gap: 0.625rem;
     grid-auto-rows: 13.8215rem;
-    
   }
-  .aCard__body{
+  .aCard__body {
     height: calc(50% + 0.625rem) !important;
   }
 
@@ -559,7 +552,6 @@ ul {
     font-family: "Poppins", Arial, Helvetica, sans-serif !important;
     font-weight: 600;
   }
-
 
   .underline__span {
     background-size: 0% 0.3rem !important;
@@ -583,10 +575,6 @@ ul {
   }
 }
 
-
-
-
-
 @media screen and (max-width: 480px) {
   .article-desc-home {
     font-size: 9.5px;
@@ -608,9 +596,9 @@ ul {
     gap: 0.4rem;
     /* padding: 0.3rem 0.4rem 0.3rem 0.4rem; */
     border-radius: 2rem;
-    
+
     margin-bottom: 0.5rem;
-  /*margin-inline: 0.4rem; */
+    /*margin-inline: 0.4rem; */
   }
 
   .article-author-home {
@@ -621,7 +609,7 @@ ul {
     gap: 0.4rem;
     padding: 0.3rem 0.4rem 0.3rem 0.4rem;
     border-radius: 2rem;
-    
+
     /* margin-bottom: 0.5rem;
   margin-inline: 0.4rem; */
   }
@@ -647,19 +635,17 @@ ul {
     font-family: "Poppins", Arial, Helvetica, sans-serif !important;
     color: rgb(0, 0, 0);
   }
- 
+
   .article-title.rec__card {
     -webkit-line-clamp: 6;
   }
- 
- 
-  
+
   .cardList_ctnr {
     grid-template-columns: repeat(auto-fit, 10.1215rem);
     gap: 0.45rem;
     grid-auto-rows: 10.1215rem;
   }
-  .aCard__body{
+  .aCard__body {
     height: calc(50% + 0.45rem) !important;
   }
   .article-title,
@@ -694,21 +680,18 @@ ul {
   }
 }
 
-
 @media screen and (max-width: 320px) {
   .cardList_ctnr {
     grid-template-columns: repeat(auto-fit, 8.1215rem);
     gap: 0.45rem;
     grid-auto-rows: 8.1215rem;
   }
-  .aCard__body{
-    
+  .aCard__body {
     height: calc(50% + 0.45rem);
-   
   }
   .article-title,
   .article-title-green {
-    font-size: .8rem !important;
+    font-size: 0.8rem !important;
   }
   .author_img-ctnr {
     width: 20px;
