--- a/styles/main.css
+++ b/styles/main.css
@@ -342,7 +342,12 @@ ul {
   grid-row-start: span 2;
   grid-row-end: span 2;
 }
-
+.toAuthorArticles--container{
+  transition: transform ease-in-out .5s;
+}
+.toAuthorArticles--container > a{
+  transition: opacity ease-in-out .5s;
+}
 .article-title-green:hover .underline__span,
 .article-title-green:focus .underline__span {
   background-size: 100% 0.4rem !important;
