--- a/styles/main.css
+++ b/styles/main.css
@@ -490,6 +490,15 @@ ul {
     overflow: hidden;
     text-overflow: ellipsis;
   }
+  .carousel-btns--ctnr div button{
+    opacity:0;
+    transform: scale(.5);
+    transition: all .4s ease-out;
+  }
+  .carousel-ctnr:hover .carousel-btns--ctnr div button{
+    opacity:1;
+    transform: scale(1);
+  }
 
   .cardList_ctnr {
     grid-template-columns: repeat(auto-fit, 15.125rem);
